--- a/.github/workflows/stream720p.yml
+++ b/.github/workflows/stream720p.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run extractor
         run: |
-          python stream720p.py
+          python 720pstream.py
 
       - name: Upload m3u8 file
         uses: actions/upload-artifact@v3
