--- a/.github/workflows/stream720p.yml
+++ b/.github/workflows/stream720p.yml
@@ -1,9 +1,9 @@
 name: Extract 720pstream Events
 
 on:
-  workflow_dispatch:    # allow manual trigger
+  workflow_dispatch:
   schedule:
-    - cron: "0 * * * *"   # run every hour
+    - cron: "0 * * * *"
 
 jobs:
   extract:
@@ -25,9 +25,8 @@ jobs:
 
       - name: Run extractor
         run: |
-          cd script.module.jetextractors/lib
-          # Run as module to respect relative imports
-          python -m jetextractors.plytvsites.stream720p > ../../output.m3u8
+          cd repo/script.module.jetextractors/lib
+          python -m jetextractors.plytvsites.stream720p > ../../../output.m3u8
 
       - name: Upload result artifact
         uses: actions/upload-artifact@v4
