--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,65 +1,78 @@
-# .github/workflows/daddylive-scraper.yml
 name: Daddylive Scraper
 
 on:
   schedule:
-    - cron: "0 * * * *"  # every hour
-  workflow_dispatch:
+    # Run every 6 hours
+    - cron: '0 */6 * * *'
+  workflow_dispatch: # Allow manual trigger
 
 jobs:
   scrape:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests beautifulsoup4 python-dateutil
-
-      - name: Run Daddylive scraper
-        working-directory: ./script.module.jetextractors/lib/jetextractors/extractors
-        run: |
-          mkdir -p ../../../data
-          python3 - <<EOF
-import sys
-import json
-
-sys.path.insert(0, "../..")  # allow importing util/models
-
-from daddylive import Daddylive
-
-scraper = Daddylive()
-items = scraper.get_items()
-
-json_items = []
-for i in items:
-    json_items.append({
-        "title": i.title,
-        "league": getattr(i, "league", ""),
-        "starttime": str(getattr(i, "starttime", "")),
-        "links": [{"name": l.name, "address": l.address} for l in getattr(i, "links", [])]
-    })
-
-with open("../../../data/daddylive.json", "w") as f:
-    json.dump(json_items, f, indent=2)
-
-print(f"Saved {len(json_items)} items to data/daddylive.json")
-EOF
-
-      - name: Commit and push JSON
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
-          git add data/daddylive.json
-          git commit -m "Update Daddylive schedule JSON [skip ci]" || echo "No changes to commit"
-          git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Checkout repository
+      uses: actions/checkout@v4
+      
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.10'
+        
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests beautifulsoup4 python-dateutil
+        
+    - name: Run scraper
+      run: |
+        python << 'EOF'
+        import sys
+        import json
+        from datetime import datetime
+        
+        # Add the module to path
+        sys.path.insert(0, 'script.module.jetextractors/lib')
+        
+        from jetextractors.extractors.daddylive import Daddylive
+        
+        # Initialize scraper
+        scraper = Daddylive()
+        
+        # Get items
+        items = scraper.get_items()
+        
+        # Convert to serializable format
+        output = {
+            "scraped_at": datetime.utcnow().isoformat() + "Z",
+            "total_items": len(items),
+            "items": []
+        }
+        
+        for item in items:
+            item_data = {
+                "title": item.title,
+                "league": getattr(item, 'league', ''),
+                "starttime": item.starttime.isoformat() if hasattr(item, 'starttime') and item.starttime else None,
+                "links": [
+                    {
+                        "address": link.address,
+                        "name": getattr(link, 'name', '')
+                    } for link in item.links
+                ]
+            }
+            output["items"].append(item_data)
+        
+        # Save to JSON
+        with open('daddylive_data.json', 'w') as f:
+            json.dump(output, f, indent=2)
+        
+        print(f"Successfully scraped {len(items)} items")
+        EOF
+        
+    - name: Commit and push if changes
+      run: |
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        git add daddylive_data.json
+        git diff --quiet && git diff --staged --quiet || (git commit -m "Update Daddylive data - $(date -u +'%Y-%m-%d %H:%M:%S UTC')" && git push)
